css/styles.css
/* Base Styles */
* {
  box-sizing: border-box;
}
body {
  margin: 0;
  width: 100vw;
  max-width: 100%;
  font-family: sans-serif;
}

h2 {
  font-size: 1em;
}

.grid-container {
  display: grid;
  grid-template-columns: 100vw;
  grid-template-rows: auto;
  grid-template-areas:
    "header"
    "nav"
    "main";
}

/* * Header */

.header {
  grid-area: header;
  width: 100%;
  height: 75px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #7477bf;
  color: white;
  padding-right: 20px;
}
.logo {
  font-weight: 100;
  margin: 20px auto 20px 20px;
}
.profile-picture {
  border-radius: 50%;
  height: 40px;
  width: 40px;
  margin-right: 10px;
  margin-left: 10px;
}
.name {
  opacity: 80%;
  font-size: 1em;
  margin-right: 15px;
}
.bell {
  padding: 5px 10px;
  border-right: 2px solid rgb(66, 2, 66, 75);
}

.bell img {
  width: 30px;
  height: 30px;
}

/* * Nav */

.nav {
  grid-area: nav;
  width: 100%;
  height: 55px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  background-color: #4d4c72;
}
.nav img {
  width: 30px;
  height: 30px;
  margin: 0 15px;
}

/* * Main */

.main {
  grid-area: main;
  width: 100%;
  display: grid;
  grid-template-columns: 100%;
  grid-template-rows: auto;
  grid-template-areas:
    "main-head"
    "alert-bar"
    "traffic"
    "daily"
    "mobile"
    "social"
    "new-members"
    "recent-activity"
    "messaging"
    "settings";
}

.alert-bar,
.traffic,
.traffic-head,
.daily,
.mobile,
.social,
.new-members,
.recent-activity,
.messaging,
.settings {
  padding: 0 15px;
}

.main-head,
.alert-bar,
.traffic,
.traffic-head,
.daily,
.mobile,
.social,
.new-members,
.recent-activity,
.messaging,
.settings {
  display: flex;
  max-width: 100%;
}

/* * Main Conatiner Header */

.main-head {
  grid-area: main-head;
  height: 55px;
  width: 100%;
  justify-content: space-evenly;
  align-items: center;
  margin: 0;
}
.title {
  margin: 10px 20px;
  font-size: 1.4em;
}
.main-head-search {
  display: flex;
  background-color: lightgrey;
  width: 100%;
  height: 100%;
  margin: 0;
  justify-content: center;
  align-items: center;
  border-radius: 0 0 0 10px;
}
.main-head-search input {
  width: 80%;
  padding: 20px 12px;
  margin: 0 10px 0 100px;
}

/* * Alert Bar */

.alert-bar {
  grid-area: alert-bar;
  width: 60%;
  height: 35px;
  margin: 15px 0;
  background-color: #7377bf;
  justify-self: center;
  align-self: center;
  justify-content: center;
  align-items: center;
}

/* * Traffic Graph */

.traffic {
  grid-area: traffic;
  flex-wrap: wrap;
  width: 100%;
  height: 250px;
  border-bottom: 1px solid lightgrey;
}
.traffic-head {
  width: 100%;
  height: 80px;
  justify-content: space-between;
  align-items: flex-start;
  padding: 0 20px;
}

.traffic-nav {
  display: flex;
  list-style: none;
  font-size: 0.8em;
}

.traffic-nav-link {
  padding: 5px 10px;
}
.active {
  background-color: #81c98f;
  border-radius: 30px;
  color: white;
}

.widget-container-large,
.widget-container-small {
  width: 95vw;
}

/* * Daily Traffic */

.daily {
  grid-area: daily;
  height: 250px;
  border-bottom: 1px solid lightgrey;
}
.daily h3 {
  margin-left: 20px;
}

/* * Mobile Traffic */
.mobile {
  grid-area: mobile;
  height: 250px;
  border-bottom: 1px solid lightgrey;
}
.mobile h3 {
  margin-left: 20px;
}

/* * Social Traffic */

.social {
  grid-area: social;
  flex-wrap: wrap;

  height: auto;
  border-bottom: 1px solid lightgrey;
  justify-content: flex-start;
  align-items: center;
}
.social h3 {
  align-self: flex-start;

  width: 100%;
  margin-left: 20px;
}
.social-cells {
  display: flex;
  flex-direction: column;
  width: 90%;
  justify-content: space-evenly;
  align-items: center;
  margin-bottom: 10px;
}
.twitter,
.facebook,
.google {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 80%;
  background-color: rgb(243, 243, 243);
  margin: 0 15px 35px;
  border: 1px solid lightgrey;
  border-radius: 3px;
}
.social-icon {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #7377bf;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  margin: 15px;
}
.social-icon svg {
  width: 25px;
  height: 25px;
}

.social-text {
  color: #7578bf;
  font-size: 0.9em;
  margin-right: 80px;
}
.social-text p:nth-of-type(1) {
  margin-bottom: 5px;
}

.social-count {
  color: rgb(139, 139, 139);
  font-size: 2.5em;
  font-weight: 100;
  margin: 0 0 20px 35px;
}

/* * New Members & Recent Activity */

.new-members {
  grid-area: new-members;
}
.recent-activity {
  grid-area: recent-activity;
}

.new-members,
.recent-activity {
  display: flex;
  flex-direction: column;
  align-items: center;
  border-bottom: 1px solid lightgrey;
  padding-bottom: 5px;
}
.new-members h3,
.recent-activity h3 {
  align-self: flex-start;
  margin-left: 20px;
}
.member-container,
.activity-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 90%;
  margin: 15px 0;
  padding-bottom: 15px;
  border-bottom: 1px solid lightgrey;
}
.member-container:last-child,
.activity-container:last-child {
  border: none;
}
.member-container img,
.activity-container img {
  border-radius: 50%;
  width: 35px;
  height: 35px;
  margin-right: 10px;
}
.member-container p,
.activity-container p,
.settings p {
  margin: 0;
  font-size: 0.8em;
  font-weight: 100;
  color: rgb(83, 83, 83);
  opacity: 0.7;
}
.member-text {
  margin-right: auto;
}

.member-text p {
  margin: 0;
}
.member-text a {
  text-decoration: none;
  color: #7377bf;
  opacity: 0.8;
  font-size: 0.8em;
}

/* * Messaging */

.messaging {
  grid-area: messaging;
  border-bottom: 1px solid lightgrey;
  flex-direction: column;
}
.message-form {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}
.messaging h3 {
  margin-left: 20px;
}
#message-search,
#message-text,
#timezone {
  width: 90%;
  margin: 5px 0;
  padding: 10px;
  background-color: #f3f3f3;
  border-radius: 5px;
  border: 1px solid lightgrey;
}

#message-search::placeholder,
#message-text::placeholder {
  color: rgb(211, 211, 211);
}

.message-form button {
  width: 90%;
  height: 35px;
  background-color: #7377bf;
  color: white;
  font-weight: bold;
  border-radius: 5px;
  margin: 10px 0 20px;
}

/* * Settings */

.settings {
  grid-area: settings;
  display: flex;
  flex-direction: column;
  height: auto;
}
.settings h3 {
  margin-left: 20px;
}
.settings p {
  margin: 15px 0 15px 20px;
}
#timezone {
  width: 91%;
  height: 35px;
  align-self: center;
  margin-top: 20px;
}

select:valid {
  color: rgb(211, 211, 211);
}
.settings-buttons {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  margin: 12px 0 60px;
}
.button-save {
  background-color: #7377bf;
}
.button-cancel {
  background-color: #b2b2b2;
}
.button-save,
.button-cancel {
  width: 43%;
  height: 35px;
  color: white;
  font-weight: bold;
  border-radius: 5px;
}

/* * **MEDIA QUERIES** * */

@media (min-width: 768px) {
  body {
    width: 90vw;
    max-width: 100%;
  }
  h2,
  h3 {
    color: #b2b2b2;
    font-weight: 300;
  }
  .name {
    color: white;
  }
  .grid-container {
    grid-template-columns: 55px 1fr;
    grid-template-areas:
      "header header"
      "nav main";
  }
  .nav {
    flex-direction: column;
    height: 100%;
    width: 100%;
    justify-content: flex-start;
  }
  .header {
    width: 100%;
  }
  .nav img {
    width: 30px;
    height: 30px;
    margin: 20px 0;
    opacity: 0.7;
  }
  .main {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-areas:
      "main-head main-head"
      "alert-bar alert-bar"
      "traffic traffic"
      "daily mobile"
      "social social"
      "new-members recent-activity"
      "messaging settings";
  }
  .main-head {
    grid-area: main-head;
  }
  .main-head-search input {
    width: 35%;
  }
  .traffic {
    grid-area: traffic;
  }
  .widget-container-large {
    width: 90vw;
  }
  .widget-container-small {
    width: 45vw;
  }
  .social {
    grid-area: social;
    height: auto;
    max-width: 100%;
  }
  .alert-bar {
    grid-area: alert-bar;
  }
  .daily {
    grid-area: daily;
    border-right: 1px solid lightgrey;
  }
  .new-members {
    grid-area: new-members;
    border-right: 1px solid lightgrey;
    max-width: 100%;
  }
  .messaging {
    grid-area: messaging;
    border-right: 1px solid lightgrey;
    max-width: 100%;
  }
  .mobile {
    grid-area: mobile;
  }
  .recent-activity {
    grid-area: recent-activity;
  }
  .settings {
    grid-area: settings;
    justify-content: space-between;
  }
  .settings-buttons {
    margin-bottom: 20px;
  }

  .social-cells {
    flex-direction: row;
    justify-content: space-evenly;
  }

  .twitter,
  .facebook,
  .google {
    justify-content: flex-start;
    width: auto;
  }

  .social-text {
    font-size: 0.7em;
    margin-right: 30px;
  }

  .social-count {
    font-size: 2em;
    margin-left: 5px;
  }

  /* ! Currently woirking on the two column layout, 
   /* !  i believe the .social container is cause /* ! the viewport to be different then the width. I /* ! am losing responsivity. it also could be not the social part, check the widths of everything */
}

